--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+// ?? ???? ??
+server.port=8181
 
-// JSP VIEW RESOLVER ?? ?? ?? ??
+
+// JSP VIEW RESOLVER 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
